# PROJECT_TOVAH_llm

./: .gitattributes  .gitignore  APPLIED_V14_3_2_UPDATE_REPORT.md  ARCHITECTURE.md  BUYER_TECHNICAL_SUMMARY.md  CHANGELOG_RC2.md  CHANGELOG_v14.1.1.md  CHANGELOG_v14.1.2.md  CHANGELOG_v14.1.md  CHANGELOG_v14.2.0.md  CHANGELOG_v14.2.1.md  CHANGELOG_v14.2.2.md  CHANGELOG_v14.2.3.md  CHANGELOG_v14.2.4.md  CHANGELOG_v14.2.5.md  CHANGELOG_v14.2.6.md  CHANGELOG_v14.2.7.md  CHANGELOG_v14.2.8.md  CHANGELOG_v14.2.9.md  CHANGELOG_v14.3.0.md  CHANGELOG_v14.3.1.md  CHANGELOG_v14.3.2.md  CHANGELOG_v14.3.2a.md  CHANGELOG_v14.3.3.md  CHANGELOG_v14.3.4.md  CHANGELOG_v14.3.5.md  COMMAND_REGISTRY.md  COMMERCIAL_SALE_AUDIT_v14_3_2a.md  DATA_PIPELINE.md  DEMO.md  EVALS.md  FORMAL_HOTT.md  FSDP_RUNBOOK.md  HANDOFF.md  HYBRID_TRAINING_RUNBOOK.md  INSTALL.md  KNOWN_LIMITATIONS.md  LICENSE_OPTIONS.md  PATCH_NOTES_V14_3_2.md  PATCH_NOTES_V14_3_2a.md  (+27 more)
cluster/: __init__.py  node.py  registry.py  trust.py
config/: __init__.py  constants.py  paths.py  settings.py
configs/: 100m.yaml  13b_fsdp_reference.yaml  1b_fsdp.yaml  README.md  debug_5m.yaml
conformance/: __init__.py  fixtures.py  regression.py
core/: __init__.py  cache.py  contracts.py  lanes.py  primitives.py  runtime_interface.py  state.py  updates_gate.py  updates_measurement.py
debug/: __init__.py  failure_clusters.py  metrics.py  observability.py  trace_writer.py
diagnostics/: observed_48_token_probe_summary.json
docs/: TOVAH_V14_3_2_SHADOW_DEPTH.md  V14_3_3_LOOP_SUPPORT_HARDENING.md  V14_3_3_RUNBOOK.md  V14_3_4_FRONTIER_HARDENING.md  V14_3_5_NEXT_UPDATE.md
evals/: common.py  gap_tolerance.py  high_glut_preservation.py  memory_conflict_eval.py  patch_certification_eval.py  run_all.py  semantic_consistency.py  smoke_language_modeling.py
hott/: __init__.py  core.py  formal.py  memory_identity.py  module_equivalence.py  obstruction.py  paraconsistent.py  patch_certificates.py
kernel/: __init__.py  (+14 more)
(+142 files in other folders)
